<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fraSettings" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setting_lbl"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <LinearLayout
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="16dp" >
        
	        <TextView 
	            android:id="@+id/txtDescrTopAll"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:paddingRight="16dp"         
	            android:visibility="invisible"
	            android:textColor="@color/textview"
	            android:text="@string/DescrTopAll"
	            android:gravity="left"/>
	        
            <CheckBox
                android:id="@+id/chkShowTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/showTopBanks" />
            
        </LinearLayout>

        <NumberPicker
            android:id="@+id/npTopBanks"
            android:layout_width="49dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblInteres"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/YouIntereset"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/rgValute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rbEUR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/EUR" />

            <RadioButton
                android:id="@+id/rbUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/USD" />
        </RadioGroup>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblOperation"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/OperByVal"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/rgOperation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/rbBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Bye" />

            <RadioButton
                android:id="@+id/rbSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sale" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>